# cf-gemm

./: CMakeLists.txt  README.md  help-perf.txt  out.txt  perf.sh  perf.txt  run.sh
include/: gemm.h
src/: gemm.cpp  main.cpp
